--- a/Pages/ChangePassword.cshtml
+++ b/Pages/ChangePassword.cshtml
@@ -50,6 +50,10 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent p-2 mb-0">
                     <li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                        <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                    </li>
+                    <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/password.png" alt="Home" width="16" height="16" class="me-2" />
                         @Model.lblChangePasswords
                     </li>
