--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -149,6 +149,10 @@
             <div class="mb-3 mb-lg-0">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-2 mb-0">
+                        <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                        </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
                              <a href="/Disbursements" class="text-decoration-none">@Model.lblDisbursements</a>
