--- a/Pages/EditItemGroup.cshtml
+++ b/Pages/EditItemGroup.cshtml
@@ -48,6 +48,10 @@
                  <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-2 mb-0">
                         <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
                             <a href="/ManageItems" class="text-decoration-none">@Model.lblItems</a>
                         </li>
