--- a/Pages/EditUser.cshtml
+++ b/Pages/EditUser.cshtml
@@ -85,6 +85,10 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-2 mb-0">
                         <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
                             <a href="/ManageUsers" class="text-decoration-none">@Model.lblUsers</a>
                         </li>
