--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -58,7 +58,10 @@
         <div class="d-block mb-4 mb-md-0">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent p-2 mb-0">
-                    
+                    <li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                        <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                    </li>
                     <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
                         @Model.lblItems
