--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8534,6 +8534,8 @@ fieldset:disabled .btn {
   display: flex;
   padding-left: 0;
   list-style: none;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .page-link {
