--- a/Pages/AddRooms.cshtml
+++ b/Pages/AddRooms.cshtml
@@ -49,7 +49,7 @@
 
         });
         
-        document.getElementById("KeeperJobNum").addEventListener("change", function () {
+        document.getElementById("KeeperId").addEventListener("change", function () {
             const selectedOption = this.options[this.selectedIndex];
             const UserName = selectedOption.getAttribute("data-UserName");
 
@@ -99,7 +99,7 @@
 
 
                         <div class="col-lg-12 col-sm-12">
-                            @* <div class="mb-4">
+                            <div class="mb-4">
                                 <label for="StoreId">@Model.lblStoreNumber</label>
                                 <select class="form-select" id="StoreId" name="StoreId">
                                     <option value=""></option>
@@ -107,13 +107,13 @@
                                     {
                                         foreach (var item in Model.Stores)
                                         {
-                                            if(item.IsActive == 1 && item.Ended == null){
-                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerID" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
+                                            if(item.IsActive == 1 ){
+                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
                                         }
                                     }
                                 </select>
                                 
-                            </div> *@
+                            </div>
 
                             <div class="mb-4">
                                 <label for="StoreType">@Model.lblWarehouseType</label>
@@ -164,8 +164,8 @@
 
                              @* Warehouse Keeper JobNumber  *@
                             <div class="mb-4">
-                                    <label class="my-1 me-2" for="KeeperJobNum">@Model.lblKeeperJobNum</label>
-                                    <select class="form-select" id="KeeperJobNum" name="KeeperJobNum"
+                                    <label class="my-1 me-2" for="KeeperId">@Model.lblKeeperJobNum</label>
+                                    <select class="form-select" id="KeeperId" name="KeeperId"
                                         aria-label="Default select example">
                                         <option value=""></option>
                                         
@@ -174,7 +174,7 @@
                                     {
                                         foreach (var item in Model.KeeperGroupsList)
                                         {
-                                            <option value="@item.JobNumber" data-UserName="@item.UserName">@item.JobNumber</option>
+                                            <option value="@item.UserId" data-UserName="@item.UserName">@item.JobNumber</option>
                                         }
                                     }
 
